--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<!-- Start Meta -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="text" content="">
-		<meta name="author" content="">
+		<meta name="text" content="大阪市・関西財界がサポートする「クリエイティブ・ディストラクション・サロン produced by 佐久間洋司」の公式ウェブサイトです。">
+		<meta name="author" content="大阪市,Osaka,佐久間洋司,Hiroshi Sakuma">
 		<!-- End Meta -->
 
 
@@ -126,9 +126,7 @@
 						<!-- Footer Info -->
 						<div class="footer-info col-md-12 t-left gray1 semibold f-small">
 
-							<p>Osaka Innovation Hub（大阪イノベーションハブ）</p>
-							<p>Tel: 06-6359-3004</p>
-							<p>Email: ohclub@innovation-osaka.jp</p>
+							<p>Copyright of Creative Destruction Salon All Rights Reserved.</p>
 
 						</div>
 						<!-- End Footer Info -->
@@ -228,10 +226,61 @@
 									<!-- End Separator -->
 
 									<!-- Paragraph -->
-									<p class="t-left"><span class="bold">「クリエイティブ・ディストラクション・サロン produced by 佐久間洋司」</span>は、2025年の日本をつくるリーダーを大阪から生み出すことを目的とした、最先端のテクノロジーやビジネスを若者が主体的に学び議論するサロンです。</p>
+									<p class="t-left"><span class="bold">「クリエイティブ・ディストラクション・サロン produced by 佐久間洋司」</span>は、2030年の日本をつくるリーダーを大阪から生み出すことを目的として、最先端のテクノロジーやビジネスを若者が学び議論するサロンです。</p>
 
 									<!-- Paragraph -->
-									<p class="t-left">人工知能やバーチャルリアリティなど毎月テーマを変えて、世界的に活躍する研究者や起業家をゲストとして招いて開催しています。<br>分野の最先端を切り開くゲストによる話題提供、ファシリテーターによる踏み込んだパネルディスカッション、参加者全員が参加する全体討論を通じて、表面的な情報にとどまらない深い知識を得ることを目指しています。</p>
+									<p class="t-left">大阪大学の現役学生で認知科学者の佐久間洋司がファシリテーターとなり、世界的に活躍する研究者や起業家をゲストに招いて開催しています。大阪市や関西財界のサポートによりオール大阪で運営しています。</p>
+
+									<!-- Paragraph -->
+									<p class="t-left">分野の最先端を切り開くゲストによる話題提供、ファシリテーターによる踏み込んだパネルディスカッション、参加者全員が参加する全体討論を通じて、表面的な情報にとどまらない深い知識を得ることを目指しています。</p>
+
+								</div>
+								<!-- End Brief -->
+
+							</div>
+							<!-- End Column -->
+
+
+						</div>
+						<!-- End Row -->
+
+					</div>
+					<!-- End Section Content -->
+
+				</div>
+				<!-- End About -->
+
+
+				<!-- About -->
+				<div id="about">
+
+
+
+					<!-- Section Content -->
+					<div class="section-content">
+
+
+
+						<!-- Row -->
+						<div class="row">
+
+
+
+							<!-- Column -->
+							<div class="col-md-12">
+
+								<!-- Brief -->
+								<div class="brief">
+
+									<!-- Heading -->
+									<h3 class="t-left f-normal ultrabold uppercase">Info:</h3>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left"><span class="bold">クリエイティブ・ディストラクション・サロン produced by 佐久間洋司</span></p>
 
 									<!-- Paragraph -->
 									<p class="t-left"><span class="bold">主催：</span>大阪イノベーションハブ（大阪市）、公益財団法人大阪産業局<br><span class="bold">共催：</span>人工知能研究会 / AIR<br><span class="bold">協力：</span>伊藤忠商事株式会社、パナソニック株式会社<br><span class="bold">後援：</span>公益社団法人関西経済連合会、大阪商工会議所、一般社団法人関西経済同友会</p>
@@ -253,7 +302,62 @@
 				<!-- End About -->
 
 
+				<!-- Activity -->
+				<div id="about">
 
+
+
+					<!-- Section Content -->
+					<div class="section-content">
+
+
+
+						<!-- Row -->
+						<div class="row">
+
+
+
+							<!-- Column -->
+							<div class="col-md-12">
+
+								<!-- Brief -->
+								<div class="brief">
+
+									<!-- Heading -->
+									<h3 class="t-left f-normal ultrabold uppercase">Activity:</h3>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left"><span class="bold">【第1回】2030の私達の時代にAI・IoTはどんなビッグデータを生み、進化しているだろうか？</span></p>
+									<p class="t-left">日時：令和元年7月1日（月）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：本村陽一氏（産業技術総合研究所 人工知能研究センター首席研究員）</p>
+
+									<!-- Paragraph -->
+									<p class="t-left"><span class="bold">【第2回】バーチャルリアリティと人間の身体の行方を探る</span></p>
+									<p class="t-left">日時：令和元年8月30日（金）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：稲見 昌彦氏（東京大学先端科学技術研究センター 教授／JST ERATO稲見自在化身体プロジェクト 研究総括）</p>
+
+									<!-- Paragraph -->
+									<p class="t-left"><span class="bold">【第3回】脳情報が生み出すビッグデータと新しい産業（仮）</span></p>
+									<p class="t-left">日時：令和元年10月18日（金）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：関谷毅氏（大阪大学 総長補佐／栄誉教授、大阪大学産業科学研究所 教授ほか）</p>
+
+
+								</div>
+								<!-- End Brief -->
+
+							</div>
+							<!-- End Column -->
+
+
+						</div>
+						<!-- End Row -->
+
+					</div>
+					<!-- End Section Content -->
+
+				</div>
+				<!-- End Activity -->
 
 
 
@@ -289,13 +393,7 @@
 
 								<!-- Footer Details -->
 								<div class="footer-details t-left">
-									<p class="dark f-small lato"><span class="bold">Osaka Innovation Hub（大阪イノベーションハブ）</span></p>
-
-									<!-- Phone -->
-									<p class="dark f-small lato">Tel: 06-6359-3004</p>
-
-									<!-- Email -->
-									<p class="dark f-small lato">Email: <a href="mailto:ohclub@innovation-osaka.jp">ohclub@innovation-osaka.jp</a></p>
+									<p class="dark f-small lato">Copyright of <span class="bold">Creative Destruction Salon</span> All Rights Reserved.</p>
 
 								</div>
 								<!-- End Footer Details -->
