--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
 				<!-- Links -->
 				<ul class="uk-nav uk-nav-offcanvas uk-nav-parent-icon" data-uk-nav>
 
-					<li class="t-left f-small uppercase"><a href="#">Coming soon...</a></li>
+					<li class="t-left f-small uppercase"><a href="./index.html">Home</a></li>
+					<li class="t-left f-small uppercase"><a href="#About">About</a></li>
+					<li class="t-left f-small uppercase"><a href="#Info">Info</a></li>
+					<li class="t-left f-small uppercase"><a href="#Activity">Activity</a></li>
+					<li class="t-left f-small uppercase"><a href="#Media">Media</a></li>
 
 				</ul>
 				<!-- End Links -->
@@ -219,7 +223,7 @@
 								<div class="brief">
 
 									<!-- Heading -->
-									<h3 class="t-left f-normal ultrabold uppercase">About:</h3>
+									<h3 class="t-left f-normal ultrabold uppercase" id="About">About:</h3>
 
 									<!-- Separator -->
 									<div class="separator-small"></div>
@@ -273,7 +277,7 @@
 								<div class="brief">
 
 									<!-- Heading -->
-									<h3 class="t-left f-normal ultrabold uppercase">Info:</h3>
+									<h3 class="t-left f-normal ultrabold uppercase" id="Info">Info:</h3>
 
 									<!-- Separator -->
 									<div class="separator-small"></div>
@@ -324,7 +328,7 @@
 								<div class="brief">
 
 									<!-- Heading -->
-									<h3 class="t-left f-normal ultrabold uppercase">Activity:</h3>
+									<h3 class="t-left f-normal ultrabold uppercase" id="Activity">Activity:</h3>
 
 									<!-- Separator -->
 									<div class="separator-small"></div>
@@ -334,9 +338,17 @@
 									<p class="t-left"><span class="bold">【第1回】2030の私達の時代にAI・IoTはどんなビッグデータを生み、進化しているだろうか？</span></p>
 									<p class="t-left">日時：令和元年7月1日（月）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：本村陽一氏（産業技術総合研究所 人工知能研究センター首席研究員）</p>
 
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
 									<!-- Paragraph -->
 									<p class="t-left"><span class="bold">【第2回】バーチャルリアリティと人間の身体の行方を探る</span></p>
 									<p class="t-left">日時：令和元年8月30日（金）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：稲見 昌彦氏（東京大学先端科学技術研究センター 教授／JST ERATO稲見自在化身体プロジェクト 研究総括）</p>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
 
 									<!-- Paragraph -->
 									<p class="t-left"><span class="bold">【第3回】脳情報が生み出すビッグデータと新しい産業（仮）</span></p>
@@ -360,7 +372,60 @@
 				<!-- End Activity -->
 
 
+				<!-- Media -->
+				<div id="about">
 
+
+
+					<!-- Section Content -->
+					<div class="section-content">
+
+
+
+						<!-- Row -->
+						<div class="row">
+
+
+
+							<!-- Column -->
+							<div class="col-md-12">
+
+								<!-- Brief -->
+								<div class="brief">
+
+									<!-- Heading -->
+									<h3 class="t-left f-normal ultrabold uppercase" id="Media">Media:</h3>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left">2019/09/06<br><span class="bold">「【一聞百見】ＡＩ、ＶＲ…科学で目指す争いのない世界　認知科学者、佐久間洋司さん（２３）」</span>産経新聞<br><a href="https://www.sankei.com/west/news/190906/wst1909060015-n1.html" target="_blank">https://www.sankei.com/west/news/190906/wst1909060015-n1.html</a></p>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left">2019/08/06<br><span class="bold">「本当に使えるビッグデータはどこにあるのか？」</span>アスキー倶楽部<br><a href="https://ascii.jp/limit/group/ida/elem/000/001/898/1898901/" target="_blank">https://ascii.jp/limit/group/ida/elem/000/001/898/1898901/</a></p>
+
+
+								</div>
+								<!-- End Brief -->
+
+							</div>
+							<!-- End Column -->
+
+
+						</div>
+						<!-- End Row -->
+
+					</div>
+					<!-- End Section Content -->
+
+				</div>
+				<!-- End Media -->
 
 
 				<!-- Footer -->
