--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 									<p class="t-left"><span class="bold">「クリエイティブ・ディストラクション・サロン produced by 佐久間洋司」</span>は、2030年の日本をつくるリーダーを大阪から生み出すことを目的として、最先端のテクノロジーやビジネスを若者が学び議論するサロンです。</p>
 
 									<!-- Paragraph -->
-									<p class="t-left">大阪大学の現役学生で認知科学者の佐久間洋司がファシリテーターとなり、世界的に活躍する研究者や起業家をゲストに招いて開催しています。大阪市や関西財界のサポートによりオール大阪で運営しています。</p>
+									<p class="t-left">大阪大学の現役学生で認知科学者の佐久間洋司がファシリテーターとなり、世界的に活躍する研究者や起業家をゲストに招いて開催しています。</p>
 
 									<!-- Paragraph -->
 									<p class="t-left">分野の最先端を切り開くゲストによる話題提供、ファシリテーターによる踏み込んだパネルディスカッション、参加者全員が参加する全体討論を通じて、表面的な情報にとどまらない深い知識を得ることを目指しています。</p>
@@ -401,14 +401,14 @@
 									<!-- End Separator -->
 
 									<!-- Paragraph -->
-									<p class="t-left">2019/09/06<br><span class="bold">「【一聞百見】ＡＩ、ＶＲ…科学で目指す争いのない世界　認知科学者、佐久間洋司さん（２３）」</span>産経新聞<br><a href="https://www.sankei.com/west/news/190906/wst1909060015-n1.html" target="_blank">https://www.sankei.com/west/news/190906/wst1909060015-n1.html</a></p>
+									<p class="t-left">2019/09/06<br><a href="https://www.sankei.com/west/news/190906/wst1909060015-n1.html" target="_blank"><span class="bold">「【一聞百見】ＡＩ、ＶＲ…科学で目指す争いのない世界　認知科学者、佐久間洋司さん（２３）」</span></a><br>産経新聞</p>
 
 									<!-- Separator -->
 									<div class="separator-small"></div>
 									<!-- End Separator -->
 
 									<!-- Paragraph -->
-									<p class="t-left">2019/08/06<br><span class="bold">「本当に使えるビッグデータはどこにあるのか？」</span>アスキー倶楽部<br><a href="https://ascii.jp/limit/group/ida/elem/000/001/898/1898901/" target="_blank">https://ascii.jp/limit/group/ida/elem/000/001/898/1898901/</a></p>
+									<p class="t-left">2019/08/06<br><a href="https://ascii.jp/limit/group/ida/elem/000/001/898/1898901/" target="_blank"><span class="bold">「本当に使えるビッグデータはどこにあるのか？」</span></a><br>アスキー倶楽部</p>
 
 
 								</div>
