--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="text" content="大阪市・関西財界がサポートする「クリエイティブ・ディストラクション・サロン produced by 佐久間洋司」の公式ウェブサイトです。">
 		<meta name="author" content="大阪市,Osaka,佐久間洋司,Hiroshi Sakuma">
+		<meta name="google-site-verification" content="-d1WvRgGH8ZSyC4w5Z_I7jKC_q3LnoqzrvGr0lWUssw" />
 		<!-- End Meta -->
 
 
