--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="text" content="大阪市・関西財界がサポートする「クリエイティブ・ディストラクション・サロン produced by 佐久間洋司」の公式ウェブサイトです。">
 		<meta name="author" content="大阪市,Osaka,佐久間洋司,Hiroshi Sakuma">
-		<meta name="google-site-verification" content="-d1WvRgGH8ZSyC4w5Z_I7jKC_q3LnoqzrvGr0lWUssw" />
 		<!-- End Meta -->
 
 
@@ -237,7 +236,7 @@
 									<p class="t-left">大阪大学の現役学生で認知科学者の佐久間洋司がファシリテーターとなり、世界的に活躍する研究者や起業家をゲストに招いて開催しています。</p>
 
 									<!-- Paragraph -->
-									<p class="t-left">分野の最先端を切り開くゲストによる話題提供、ファシリテーターによる踏み込んだパネルディスカッション、参加者全員が参加する全体討論を通じて、表面的な情報にとどまらない深い知識を得ることを目指しています。</p>
+									<p class="t-left">1. 分野の最先端を切り開くゲストによる話題提供<br>2. ファシリテーターによる踏み込んだパネルディスカッション<br>3. 参加者全員が参加する全体討論<br>を通じて、表面的な情報にとどまらない深い知識を得ることを目指しています。</p>
 
 								</div>
 								<!-- End Brief -->
@@ -345,7 +344,7 @@
 
 									<!-- Paragraph -->
 									<p class="t-left"><span class="bold">【第2回】バーチャルリアリティと人間の身体の行方を探る</span></p>
-									<p class="t-left">日時：令和元年8月30日（金）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：稲見 昌彦氏（東京大学先端科学技術研究センター 教授／JST ERATO稲見自在化身体プロジェクト 研究総括）</p>
+									<p class="t-left">日時：令和元年8月30日（金）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：稲見昌彦氏（東京大学先端科学技術研究センター 教授／JST ERATO稲見自在化身体プロジェクト 研究総括）</p>
 
 									<!-- Separator -->
 									<div class="separator-small"></div>
@@ -459,7 +458,7 @@
 
 								<!-- Footer Details -->
 								<div class="footer-details t-left">
-									<p class="dark f-small lato">Copyright of <span class="bold">Creative Destruction Salon</span> All Rights Reserved.</p>
+									<p class="dark f-small lato">Copyright of <span class="bold">Creative Destruction Salon</span><br>All Rights Reserved.</p>
 
 								</div>
 								<!-- End Footer Details -->
