--- a/index.html
+++ b/index.html
@@ -401,6 +401,20 @@
 									<!-- End Separator -->
 
 									<!-- Paragraph -->
+									<p class="t-left">2019/09/17<br><a href="http://www.asahi.com/dialog/articles/12719431" target="_blank"><span class="bold">「万博をリードする現代版『適塾』を大阪から」</span></a><br>朝日新聞DIALOG</p>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left">2019/09/10<br><a href="https://ascii.jp/limit/group/ida/elem/000/001/918/1918955/" target="_blank"><span class="bold">「『人工知能（AI）が仕事を奪う』は短絡的」</span></a><br>アスキー倶楽部</p>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
 									<p class="t-left">2019/09/06<br><a href="https://www.sankei.com/west/news/190906/wst1909060015-n1.html" target="_blank"><span class="bold">「【一聞百見】ＡＩ、ＶＲ…科学で目指す争いのない世界　認知科学者、佐久間洋司さん（２３）」</span></a><br>産経新聞</p>
 
 									<!-- Separator -->
