--- a/index.html
+++ b/index.html
@@ -230,13 +230,13 @@
 									<!-- End Separator -->
 
 									<!-- Paragraph -->
-									<p class="t-left"><span class="bold">「クリエイティブ・ディストラクション・サロン produced by 佐久間洋司」</span>は、2030年の日本をつくるリーダーを大阪から生み出すことを目的として、最先端のテクノロジーやビジネスを若者が学び議論するサロンです。</p>
+									<p class="t-left"><span class="bold">「クリエイティブ・ディストラクション・サロン produced by 佐久間洋司」</span>は、2030年の日本をつくるリーダーを大阪から生み出すことを目的として、最先端のテクノロジーやビジネスを若者が学び議論する「現代の適塾」です。</p>
 
 									<!-- Paragraph -->
-									<p class="t-left">大阪大学の現役学生で認知科学者の佐久間洋司がファシリテーターとなり、世界的に活躍する研究者や起業家をゲストに招いて開催しています。</p>
+									<p class="t-left">20代限定の参加者が体得した最先端技術・ビジネスからのパラダイムシフトを、社内や周りに伝えていき社会のオピニオンリーダーになることを目指します。</p>
 
 									<!-- Paragraph -->
-									<p class="t-left">1. 分野の最先端を切り開くゲストによる話題提供<br>2. ファシリテーターによる踏み込んだパネルディスカッション<br>3. 参加者全員が参加する全体討論<br>を通じて、表面的な情報にとどまらない深い知識を得ることを目指しています。</p>
+									<p class="t-left">1. 研究の最先端：各回ごとに異なるテーマで気鋭の研究者を招いて議論し、得られた「学びの微分値」を周りへ伝えていきます<br>2. 大阪・関西万博：2025年の大阪・関西万博で提示する「5年後の未来」をサロンメンバーが提案できることを目指します<br>3. 若手中心の議論：ディスカッションに参加するのは20代の参加者のみ、その他の方はオブザーバーとして見守っていただきます</p>
 
 								</div>
 								<!-- End Brief -->
@@ -287,7 +287,7 @@
 									<p class="t-left"><span class="bold">クリエイティブ・ディストラクション・サロン produced by 佐久間洋司</span></p>
 
 									<!-- Paragraph -->
-									<p class="t-left"><span class="bold">主催：</span>大阪イノベーションハブ（大阪市）、公益財団法人大阪産業局<br><span class="bold">共催：</span>人工知能研究会 / AIR<br><span class="bold">協力：</span>伊藤忠商事株式会社、パナソニック株式会社<br><span class="bold">後援：</span>公益社団法人関西経済連合会、大阪商工会議所、一般社団法人関西経済同友会</p>
+									<p class="t-left"><span class="bold">主催：</span>大阪イノベーションハブ（大阪市）、公益財団法人大阪産業局<br><span class="bold">共催：</span>人工知能研究会 / AIR<br><span class="bold">協賛：</span>伊藤忠商事株式会社、パナソニック株式会社<br><span class="bold">後援：</span>公益社団法人関西経済連合会、大阪商工会議所、一般社団法人関西経済同友会</p>
 
 								</div>
 								<!-- End Brief -->
@@ -351,8 +351,16 @@
 									<!-- End Separator -->
 
 									<!-- Paragraph -->
-									<p class="t-left"><span class="bold">【第3回】脳情報が生み出すビッグデータと新しい産業（仮）</span></p>
+									<p class="t-left"><span class="bold">【第3回】脳情報が生み出すビッグデータと新しい産業</span></p>
 									<p class="t-left">日時：令和元年10月18日（金）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：関谷毅氏（大阪大学 総長補佐／栄誉教授、大阪大学産業科学研究所 教授ほか）</p>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left"><span class="bold">【第4回】ソーシャルメディアから読み解く人間の心理・社会現象（仮）</span></p>
+									<p class="t-left">日時：令和元年11月5日（火）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：土方嘉徳氏（関西学院大学商学部 教授）</p>
 
 
 								</div>
