--- a/index.html
+++ b/index.html
@@ -236,7 +236,9 @@
 									<p class="t-left">20代限定の参加者が体得した最先端技術・ビジネスからのパラダイムシフトを、社内や周りに伝えていき社会のオピニオンリーダーになることを目指します。</p>
 
 									<!-- Paragraph -->
-									<p class="t-left">1. 研究の最先端：各回ごとに異なるテーマで気鋭の研究者を招いて議論し、得られた「学びの微分値」を周りへ伝えていきます<br>2. 大阪・関西万博：2025年の大阪・関西万博で提示する「5年後の未来」をサロンメンバーが提案できることを目指します<br>3. 若手中心の議論：ディスカッションに参加するのは20代の参加者のみ、その他の方はオブザーバーとして見守っていただきます</p>
+									<p class="t-left"><b>1. 研究の最先端：</b>各回ごとに異なるテーマで気鋭の研究者を招いて議論し、得られた「学びの微分値」を周りへ伝えていきます</p>
+									<p class="t-left"><b>2. 大阪・関西万博：</b>2025年の大阪・関西万博で提示する「5年後の未来」をサロンメンバーが提案できることを目指します</p>
+									<p class="t-left"><b>3. 若手中心の議論：</b>ディスカッションに参加するのは20代の参加者のみ、その他の方はオブザーバーとして見守っていただきます</p>
 
 								</div>
 								<!-- End Brief -->
