--- a/index.html
+++ b/index.html
@@ -289,7 +289,10 @@
 									<p class="t-left"><span class="bold">クリエイティブ・ディストラクション・サロン produced by 佐久間洋司</span></p>
 
 									<!-- Paragraph -->
-									<p class="t-left"><span class="bold">主催：</span>大阪イノベーションハブ（大阪市）、公益財団法人大阪産業局<br><span class="bold">共催：</span>人工知能研究会 / AIR<br><span class="bold">協賛：</span>伊藤忠商事株式会社、パナソニック株式会社<br><span class="bold">後援：</span>公益社団法人関西経済連合会、大阪商工会議所、一般社団法人関西経済同友会</p>
+									<p class="t-left"><span class="bold">主催：</span>大阪イノベーションハブ（大阪市）、公益財団法人大阪産業局<br><img src="./images/oih.jpg" width="320"><img src="./images/sangyou.jpg" width="320"></p>
+									<p class="t-left"><span class="bold">共催：</span>人工知能研究会 / AIR<br><img src="./images/air.jpg" width="320"></p>
+									<p class="t-left"><span class="bold">協賛：</span>伊藤忠商事株式会社、パナソニック株式会社<br><img src="./images/itochu.jpg" width="320"><img src="./images/panasonic.jpg" width="320"></p>
+									<p class="t-left"><span class="bold">後援：</span>公益社団法人関西経済連合会、大阪商工会議所、一般社団法人関西経済同友会</p>
 
 								</div>
 								<!-- End Brief -->
@@ -405,6 +408,13 @@
 
 									<!-- Heading -->
 									<h3 class="t-left f-normal ultrabold uppercase" id="Media">Media:</h3>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left">2019/10/28<br><a href="https://newspicks.com/news/4224928/" target="_blank"><span class="bold">「【佐久間洋司】孫正義育英財団、パナソニック…自力で研究費を獲得」</span></a><br>NewsPicks</p>
 
 									<!-- Separator -->
 									<div class="separator-small"></div>
