--- a/index.html
+++ b/index.html
@@ -364,8 +364,33 @@
 									<!-- End Separator -->
 
 									<!-- Paragraph -->
-									<p class="t-left"><span class="bold">【第4回】ソーシャルメディアから読み解く人間の心理・社会現象（仮）</span></p>
+									<p class="t-left"><span class="bold">【第4回】ソーシャルメディアから読み解く人間の心理・社会現象</span></p>
 									<p class="t-left">日時：令和元年11月5日（火）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：土方嘉徳氏（関西学院大学商学部 教授）</p>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left"><span class="bold">【第5回】バーチャルYouTuberと誰もがなりたい自分になる世界</span></p>
+									<p class="t-left">日時：令和2年1月8日（水）18:30～21:00<br>場所：大阪イノベーションハブ（大阪市北区大深町グランフロント大阪 北館タワーC 7F）<br>ゲスト：荒木英士氏（グリー株式会社　取締役上級執行役員／株式会社Wright Flyer Live Entertainment 代表取締役社長）</p>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left"><span class="bold">【第6回】再生医療の未来と産学共創のあり方を考える</span></p>
+									<p class="t-left">日時：令和2年2月4日（火）18:30～21:00<br>場所：さくらインターネット（大阪イノベーションハブではありません）<br>ゲスト：高橋政代氏（株式会社ビジョンケア 代表取締役社長）</p>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left"><span class="bold">【CDSシンポジウム】大阪から2030年の未来を創る「現代の適塾」</span></p>
+									<p class="t-left">日時：令和2年3月13日（金）18:00～21:00<br>場所：ナレッジサロン（大阪イノベーションハブではありません）<br>ゲスト：石黒浩氏（大阪大学 栄誉教授）、深野弘行氏（伊藤忠商事 専務理事）、宮部義幸氏（パナソニック 専務執行役員）
+</p>
 
 
 								</div>
@@ -408,6 +433,20 @@
 
 									<!-- Heading -->
 									<h3 class="t-left f-normal ultrabold uppercase" id="Media">Media:</h3>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left">2020/01/07<br><a href="https://ascii.jp/limit/group/ida/elem/000/001/977/1977330/" target="_blank"><span class="bold">「VRが発展するときに人間に求められる能力とは」</span></a><br>アスキー倶楽部</p>
+
+									<!-- Separator -->
+									<div class="separator-small"></div>
+									<!-- End Separator -->
+
+									<!-- Paragraph -->
+									<p class="t-left">2019/12/18<br><a href="https://ascii.jp/limit/group/ida/elem/000/001/952/1952574/" target="_blank"><span class="bold">「『ドラえもん』の「もしもボックス」はVRを先駆けていた」</span></a><br>アスキー倶楽部</p>
 
 									<!-- Separator -->
 									<div class="separator-small"></div>
