--- a/index.html
+++ b/index.html
@@ -240,6 +240,8 @@
 									<p class="t-left"><b>2. 大阪・関西万博：</b>2025年の大阪・関西万博で提示する「5年後の未来」をサロンメンバーが提案できることを目指します</p>
 									<p class="t-left"><b>3. 若手中心の議論：</b>ディスカッションに参加するのは20代の参加者のみ、その他の方はオブザーバーとして見守っていただきます</p>
 
+									<p class="t-left"><span class="bold">昨年度の成果報告書はこちらからダウンロードください：<a href="https://hiroshi-skm.com/20200428_CreativeDestructionSalon.pdf" target="_blank"><span class="bold">[20200428_CreativeDestructionSalon.pdf]</span></a></p>
+
 								</div>
 								<!-- End Brief -->
 
